chore: implemented filter and search for get task by status